Added html structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="Weather-app-wrapper">
+        <h1>São Paulo Brazil</h1>
+        <h2>Friday 09:58</h2>
+        <div class="row">
+          <div class="col-4">
+            <ul>
+              <li>Broken Clouds</li>
+              <li>12 °C °F</li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBLtPVHNeIipOAc238W5jjjFM9IFPjVbTscQ&usqp=CAU"
+              atl="clear"
+            />
+          </div>
+          <div class="col-4">
+            <ul>
+              <li>Humidity: 73%</li>
+              <li>Precipitation: 0%</li>
+            </ul>
+          </div>
+          <small>
+            This project was coded by Izabella Gonçalves, and it's
+            <a
+              href="https://github.com/Izabellalealg/weather-app"
+              target="_blank"
+            >
+              open-sourced on GitHub
+            </a>
+          </small>
+        </div>
+      </div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
