--- a/index.html
+++ b/index.html
@@ -4,49 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="Weather-app-wrapper">
-        <h1>São Paulo Brazil</h1>
-        <h2>Friday 09:58</h2>
-        <div class="row">
-          <div class="col-4">
-            <ul>
-              <li>Broken Clouds</li>
-              <li>12 °C °F</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>
+            <span id="city">São Paulo</span> <span id="country">Brazil</span>
+          </h1>
+          <h2>Friday 09:58</h2>
+          <div class="row">
+            <div class="col-4">
+              <ul>
+                <li>Broken Clouds</li>
+                <li>12 °C °F</li>
+              </ul>
+            </div>
+            <div class="col-4" id="weather-illustration">
+              <img
+              src=https://ssl.gstatic.com/onebox/weather/64/rain_s_cloudy.png
+              atl="rainy" />
+            </div>
+            <div class="col-4">
+              <ul>
+                <li>Humidity: 73%</li>
+                <li>Precipitation: 0%</li>
+              </ul>
+            </div>
           </div>
-          <div class="col-4">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBLtPVHNeIipOAc238W5jjjFM9IFPjVbTscQ&usqp=CAU"
-              atl="clear"
-            />
-          </div>
-          <div class="col-4">
-            <ul>
-              <li>Humidity: 73%</li>
-              <li>Precipitation: 0%</li>
-            </ul>
-          </div>
-          <small>
-            This project was coded by Izabella Gonçalves, and it's
-            <a
-              href="https://github.com/Izabellalealg/weather-app"
-              target="_blank"
-            >
-              open-sourced on GitHub
-            </a>
-          </small>
         </div>
+        <small>
+          This project was coded by Izabella Gonçalves, and it's
+          <a
+            href="https://github.com/Izabellalealg/weather-app"
+            target="_blank"
+          >
+            open-sourced on GitHub
+          </a>
+        </small>
       </div>
     </div>
     <script src="src/app.js"></script>
