--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script
+      src="https://kit.fontawesome.com/0b0be9e4a7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -22,18 +26,16 @@
           </h1>
           <h2>Friday 09:58</h2>
           <div class="row">
-            <div class="col-4">
+            <div class="col-4 ul-wrapper">
               <ul>
                 <li>Broken Clouds</li>
                 <li>12 °C °F</li>
               </ul>
             </div>
-            <div class="col-4" id="weather-illustration">
-              <img
-              src=https://ssl.gstatic.com/onebox/weather/64/rain_s_cloudy.png
-              atl="rainy" />
+            <div class="col-4" id="weather-icon">
+              <i class="fas fa-cloud-rain"></i>
             </div>
-            <div class="col-4">
+            <div class="col-4 ul-wrapper">
               <ul>
                 <li>Humidity: 73%</li>
                 <li>Precipitation: 0%</li>
