--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <h1>
-            <span id="city">São Paulo</span> <span id="country">Brazil</span>
-          </h1>
+          <h1><span id="city"></span> <span id="country">Brazil</span></h1>
           <ul class="current-info">
             <li>Friday 09:58</li>
-            <li>Rainy</li>
+            <li id="description"></li>
           </ul>
           <div class="row">
             <div class="col-4 current-temperature">
-              <strong>12</strong><span class="units">°C | °F</span>
+              <strong id="temp"></strong><span class="units">°C | °F</span>
             </div>
             <div class="col-4" id="weather-icon">
               <i class="fas fa-cloud-rain"></i>
             </div>
             <div class="col-4 ul-wrapper">
               <ul class="weather-details">
-                <li class="extra-info">Humidity: 73%</li>
-                <li class="extra-info">Precipitation: 0%</li>
+                <li class="extra-info">
+                  Humidity: <span id="humidity"></span>%
+                </li>
+                <li class="extra-info">Wind: <span id="wind"></span> Km/H</li>
               </ul>
             </div>
           </div>
