--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="weather-app">
           <h1><span id="city"></span> <span id="country">Brazil</span></h1>
           <ul class="current-info">
-            <li>Friday 09:58</li>
+            <li id="date">Friday 09:58</li>
             <li id="description"></li>
           </ul>
           <div class="row">
