--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <h1><span id="city"></span> <span id="country">Brazil</span></h1>
+          <h1><span id="city"></span> <span id="country"></span></h1>
           <ul class="current-info">
-            <li id="date">Friday 09:58</li>
+            <li id="date"></li>
             <li id="description"></li>
           </ul>
           <div class="row">
@@ -33,7 +33,9 @@
               <strong id="temp"></strong><span class="units">°C | °F</span>
             </div>
             <div class="col-4" id="weather-icon">
-              <i class="fas fa-cloud-rain"></i>
+              <img src=""
+              alt=""
+              id="icon"/></i>
             </div>
             <div class="col-4 ul-wrapper">
               <ul class="weather-details">
