--- a/index.html
+++ b/index.html
@@ -23,11 +23,23 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class=col-9>
+                <input tupe="search" placeholder="Type a city..." class="form-control" id="city-input" autocomplete="off"/>
+              </div>
+              <div class=col-3>
+                <input type="submit" value="search" class="btn btn-secondary w-100"/>
+              </div>
+            </div>
+          </form>
+          <div>
           <h1><span id="city"></span> <span id="country"></span></h1>
           <ul class="current-info">
             <li id="date"></li>
             <li id="description"></li>
           </ul>
+          </div>
           <div class="row">
             <div class="col-4 current-temperature">
               <strong id="temp"></strong><span class="units">°C | °F</span>
