added unit conversion

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-4 current-temperature">
-              <strong id="temp"></strong><span class="units">°C | °F</span>
+              <strong id="temp"></strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
             </div>
             <div class="col-4" id="weather-icon">
               <img src=""
@@ -60,13 +60,14 @@
           </div>
         </div>
         <small>
-          This project was coded by Izabella Gonçalves, and it's
           <a
             href="https://github.com/Izabellalealg/weather-app"
             target="_blank"
+            class="git-link"
           >
-            open-sourced on GitHub
+            Open-source code
           </a>
+           by Izabella Gonçalves
         </small>
       </div>
     </div>
