--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="col-4 ul-wrapper">
               <ul class="weather-details">
                 <li class="extra-info">
-                  Humidity: <span id="humidity"></span>%
+                  Humidity: <span class="value"> <span id="humidity"></span>%</span>
                 </li>
-                <li class="extra-info">Wind: <span id="wind"></span> Km/H</li>
+                <li class="extra-info">Wind: <span class="value"> <span id="wind"></span> km/h </span></li>
               </ul>
             </div>
           </div>
