removed Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-4 current-temperature">
-              <strong id="temp"></strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+              <strong id="temp"></strong><span class="units">°C</span>
             </div>
             <div class="col-4" id="weather-icon">
               <img src=""
@@ -54,7 +54,7 @@
                 <li class="extra-info">
                   Humidity: <span class="value"> <span id="humidity"></span>%</span>
                 </li>
-                <li class="extra-info">Wind: <span class="value"> <span id="wind"></span> km/h </span></li>
+                <li class="extra-info">Wind: <span class="value"> <span id="wind"></span> m/h </span></li>
               </ul>
             </div>
           </div>
